--- a/quest/J147.md
+++ b/quest/J147.md
@@ -9,8 +9,14 @@
 - (층수가 높다고요? 괜찮아요 그래도 걸어올라오세요 ㅎ, 너무 높다면 5층정도까지만 걸어서 올라오기!)
 - 미션 인증은 계단 층수와 V한 손이✌️ 같이 나오도록 사진을 찍어이미지를 첨부해주세요!
 
-저는 퀘스트 미션인 계단 말고 운동으로 하겠습니다. 취미가 운동이기도 하고 계단도 운동도 체력을 기르는데 도움이 되니까요!💪💪💪
+저는 체력에 집중하여 계단 말고 운동 및 스트레칭으로 하겠습니다. 취미가 운동이기도 하고 계단도 운동도 체력을 기르는데 도움이 되니까요!💪💪💪
 
 2024.07.19(금)
 
 <img width="300" alt="image" src="https://github.com/user-attachments/assets/dcfd7700-ec4c-48c2-a38e-8137dea967ed">
+
+###
+
+2024.07.20(토)
+
+<img width="300" alt="image" src="https://github.com/user-attachments/assets/5e7f5c67-0165-40cd-a6c7-36a7d6e0186f">
