--- a/quest/J147.md
+++ b/quest/J147.md
@@ -20,3 +20,9 @@
 2024.07.20(토)
 
 <img width="300" alt="image" src="https://github.com/user-attachments/assets/5e7f5c67-0165-40cd-a6c7-36a7d6e0186f">
+
+###
+
+2024.07.21(일)
+
+<img width="300" alt="image" src="https://github.com/user-attachments/assets/a62dca26-c8a9-4278-bbf6-871bc5ed1b7f">
