docs: S074 퀘스트 제출

--- a/quest/S074.md
+++ b/quest/S074.md
@@ -3,3 +3,11 @@
 
 챌린지 미션을 하다보면 새벽을 넘기기 일쑤였습니다.<br>
 새벽에 너무 졸려서 눈이 자연스레 감기지만, 미래를 향한 눈을 뜨기 위해 현재의 저도 눈을 뜨도록 하겠습니다.
+
+### 7/21 (일)
+`하루에 3시간을 걸으면 7년 후에 지구를 한 바퀴 돌 수 있다. -사무엘 존슨-`
+
+걸어서 지구를 한 바퀴 돈다는 것은 정말 말도 안되는 일이라는 생각이 듭니다.<br>
+하지만 하루에 3시간씩만 꾸준히 걸어도 7년이라는, 말도 안된다기엔 생각보다 길지 않은 기간안에 지구를 한 바퀴 돌 수 있다고 합니다.
+우리 캠퍼들도 챌린지를 하면서 하루에 꾸준히 N시간 만큼 성장을 위해 노력한다면, 말도 안된다고 생각했던 일도 생각보다 금방 이룰 수 있지 않을까요?
+오늘 하루도 '꾸준히'를 이어가기 위해 주간 회고와 밀린 학습을 하러 가도록 하겠습니다!
