--- a/quest/J147.md
+++ b/quest/J147.md
@@ -26,3 +26,10 @@
 2024.07.21(일)
 
 <img width="300" alt="image" src="https://github.com/user-attachments/assets/a62dca26-c8a9-4278-bbf6-871bc5ed1b7f">
+
+###
+
+2024.07.22(월)
+
+<img width="300" alt="image" src="https://github.com/user-attachments/assets/370ad552-6a31-470e-9c1d-648720e5f33c">
+
