docs: S074 퀘스트 제출

--- a/quest/S074.md
+++ b/quest/S074.md
@@ -11,3 +11,11 @@
 하지만 하루에 3시간씩만 꾸준히 걸어도 7년이라는, 말도 안된다기엔 생각보다 길지 않은 기간안에 지구를 한 바퀴 돌 수 있다고 합니다.<br>
 우리 캠퍼들도 챌린지를 하면서 하루에 꾸준히 N시간 만큼 성장을 위해 노력한다면,<br>말도 안된다고 생각했던 일도 생각보다 금방 이룰 수 있지 않을까요?<br>
 오늘 하루도 '꾸준히'를 이어가기 위해 주간 회고와 밀린 학습을 하러 가도록 하겠습니다!
+
+### 7/23 (화)
+`나의 삶에는 참 많은 먹구름들이 있었다. 하지만 이와 동시에 참 많은 무지개들도 있었다. -마야 안젤루- `
+
+하늘이 가장 맑을 때는 먹구름이 잔뜩 끼고 비가 한바탕 내린 후가 아닐까요?<br>
+비바람이 강할 땐 우산을 들고 서있는 것조차 힘들 때가 있지만, 그럴수록 더 맑은 하늘이 나타나겠죠.<br>
+삶에도 가끔은 먹구름이 끼고 비가 내릴 때도 있겠지만, 그 시기만 지나면 맑은 하늘과 함께 무지개가 뜰 것이라고 생각합니다.<br>
+지금 당장 힘든 일이 있더라도 무지개가 뜰 날을 기대하며 잘 버텨봅시다!
