--- a/quest/J147.md
+++ b/quest/J147.md
@@ -33,3 +33,8 @@
 
 <img width="300" alt="image" src="https://github.com/user-attachments/assets/370ad552-6a31-470e-9c1d-648720e5f33c">
 
+###
+
+2024.07.23(화)
+
+<img width="300" alt="image" src="https://github.com/user-attachments/assets/1710690d-f67b-4074-8cbc-a544403c3d91">
