--- a/quest/J147.md
+++ b/quest/J147.md
@@ -5,9 +5,7 @@
 - 개구리를 만드려면 생각보다 긴 시간이 필요할거에요.
 - 그러기기 위해서는 강인한 체력을 기르는게 좋겠죠? 너무 미션에만 매몰되어 의자에만붙어있는건 옳지 않아요.
 ### 퀘스트 미션!
-- 이제 의자에서 엉덩이를 일으켜 세워 잠시 밖에 산책을 갔다가 엘리베이터를타지 말고 계단으로 올라오세요!
-- (층수가 높다고요? 괜찮아요 그래도 걸어올라오세요 ㅎ, 너무 높다면 5층정도까지만 걸어서 올라오기!)
-- 미션 인증은 계단 층수와 V한 손이✌️ 같이 나오도록 사진을 찍어이미지를 첨부해주세요!
+- 20분 이상 스트레칭 및 운동 기록 인증해주세요!
 
 저는 체력에 집중하여 계단 말고 운동 및 스트레칭으로 하겠습니다. 취미가 운동이기도 하고 계단도 운동도 체력을 기르는데 도움이 되니까요!💪💪💪
 
