--- a/quest/J054.md
+++ b/quest/J054.md
@@ -1,3 +1,11 @@
 7월 22일 (월)
 ---
 - 21일의 나보다 나아진점 찾기: 주말에 스트레스를 풀러 친구들과 빠지를 갔다가 핸드폰을 수장시켰다. 덕분에 저번주보다 멘탈이 더 단단해졌다. 완전 러키비키다.
+
+7월 23일 (화)
+---
+- 22일의 나보다 나아진점 찾기: 22일보다 조금 더 일찍 일어났다. 조금 더 부지런해졌다.
+
+7월 24일 (수)
+---
+- 미션을 생각보다 수월하게 진행했다. 조금 더 성장한듯한 기분이 든다.
