--- a/quest/J147.md
+++ b/quest/J147.md
@@ -36,3 +36,9 @@
 2024.07.23(화)
 
 <img width="300" alt="image" src="https://github.com/user-attachments/assets/1710690d-f67b-4074-8cbc-a544403c3d91">
+
+###
+
+2024.07.24(수)
+
+<img width="300" alt="image" src="https://github.com/user-attachments/assets/2cfffdeb-7b10-4827-83a8-9c8599f2b273">
