--- a/quest/S074.md
+++ b/quest/S074.md
@@ -19,3 +19,9 @@
 비바람이 강할 땐 우산을 들고 서있는 것조차 힘들 때가 있지만, 그럴수록 더 맑은 하늘이 나타나겠죠.<br>
 삶에도 가끔은 먹구름이 끼고 비가 내릴 때도 있겠지만, 그 시기만 지나면 맑은 하늘과 함께 무지개가 뜰 것이라고 생각합니다.<br>
 지금 당장 힘든 일이 있더라도 무지개가 뜰 날을 기대하며 잘 버텨봅시다!
+
+### 7/24 (수)
+`도중에 포기하지 말라. 망설이지 말라. 최후의 성공을 거둘 때까지 밀고 나가자. -헨리포드-`
+
+무엇을 하든 중요한 것은 '포기하지 않는 것'이라고 생각합니다.<br>
+도중에 포기하지 않고 이룰 때까지 밀고 나갑시다!
