--- a/quest/J147.md
+++ b/quest/J147.md
@@ -42,3 +42,10 @@
 2024.07.24(수)
 
 <img width="300" alt="image" src="https://github.com/user-attachments/assets/2cfffdeb-7b10-4827-83a8-9c8599f2b273">
+
+###
+
+2024.07.25(목)
+
+<img width="300" alt="image" src="https://github.com/user-attachments/assets/c2c892c2-a45b-4d30-9917-314a1889492c">
+
