docs: [S074] 퀘스트 수행 후기 작성

--- a/quest/S074.md
+++ b/quest/S074.md
@@ -25,3 +25,12 @@
 
 무엇을 하든 중요한 것은 '포기하지 않는 것'이라고 생각합니다.<br>
 도중에 포기하지 않고 이룰 때까지 밀고 나갑시다!
+
+<hr>
+
+# ✅ 퀘스트 수행 후기
+
+퀘스트를 수행할 당시의 기분이나 컨디션에 따라 어떤 명언을 적을지 고민해 보았습니다.<br>
+졸릴 땐 잠을 덜만한 명언, 지치고 꺾일 것 같을 땐 힘을 낼 수 있을만한 명언을 찾아보았습니다.
+
+마음을 다시 새로 잡고 다시 힘을 낼 때 명언이 큰 도움이 되었고, 좋은 퀘스트였던 것 같습니다!!
