--- a/2주차 quest/K055.md
+++ b/2주차 quest/K055.md
@@ -1,1 +1,9 @@
 ### K055
+
+스트레칭을 해 주었다!
+
+특히 거북목 스트레칭을 했는데,
+
+벽에 기대에 하는 스트레칭을 하였다.
+
+![스크린샷 2024-08-02 오전 10 52 27](https://github.com/user-attachments/assets/67fabcb9-5c18-4320-aeb9-6d405d63a297)
